kubernetes/apps/productivity/n8n/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-internal
  namespace: productivity
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - n8n.krapulax.home
  rules:
    - backendRefs:
        - name: n8n
          namespace: productivity
          port: 5678
